#dist_noinst_DATA = messages.proto
#
#EXTRA_DIST = messages.proto

lib_LTLIBRARIES = \
	libnorns.la \
	libnorns_debug.la \
	libnornsctl.la \
	libnornsctl_debug.la

#include_HEADERS = \
#	$(top_srcdir)/include/norns.h
#	$(top_srcdir)/include/nornsctl.h
#	$(top_srcdir)/include/norns/norns_error.h
#	$(top_srcdir)/include/norns/norns_resources.h

AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/rpc


################################################################################
# libnorns_common.la and libnorns_common_debug.la: 
#   convenience libraries for libnorns and libnornsctl
################################################################################
noinst_LTLIBRARIES = \
	libnorns_common.la \
	libnorns_common_debug.la

libnorns_common_la_SOURCES = \
	defaults.h \
	errors.c \
	log.c \
	config-parser.h \
	config-parser.c \
	requests.c \
	requests.h \
	resources.c \
	xmalloc.c \
	xmalloc.h \
	xstring.c \
	xstring.h \
	$(top_srcdir)/include/norns.h \
	$(top_srcdir)/rpc/norns-rpc.h

nodist_libnorns_common_la_SOURCES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

libnorns_common_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnorns_common_la_LIBADD = \
	@PROTOBUF_C_LIBS@ \
	@YAML_LIBS@ \
	-lpthread



## debug version ##
libnorns_common_debug_la_SOURCES = \
	$(libnorns_common_la_SOURCES)

nodist_libnorns_common_debug_la_SOURCES = \
	$(nodist_libnorns_common_la_SOURCES)

libnorns_common_debug_la_CFLAGS = \
	$(libnorns_common_la_CFLAGS)

libnorns_common_debug_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-D__NORNS_DEBUG__ \
	-Wp,-U_FORTIFY_SOURCE

libnorns_common_debug_la_LIBADD = \
	$(libnorns_common_la_LIBADD)


## misc dependencies ##
MOSTLYCLEANFILES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

BUILT_SOURCES = \
	defaults.c \
	messages.pb-c.c \
	messages.pb-c.h

defaults.c: Makefile defaults.h
	@( echo "/* This file was autogenerated by Makefile */"; \
	   echo "#include \"defaults.h\""; \
	   echo ""; \
	   echo "const char norns_default_config_file[] = \"$(sysconfdir)/norns.conf\";"; \
	) > $@


%.pb-c.c %.pb-c.h: $(top_srcdir)/rpc/%.proto
	$(PROTOC_C) --proto_path=$(top_srcdir)/rpc --c_out=$(builddir) $^


################################################################################
# libnorns.so and libnorns_debug.so: 
#   user library
################################################################################
libnorns_la_SOURCES = \
	communication.c \
	communication.h \
	context-common.c \
	context-common.h \
	libnorns-context.h \
	libnorns.c

libnorns_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnorns_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-D__BUILD_LIBNORNS__

libnorns_la_LDFLAGS = \
	-version-info 0:1:0

libnorns_la_LIBADD = \
	libnorns_common.la


## debug version ##
libnorns_debug_la_SOURCES = \
	$(libnorns_la_SOURCES)

libnorns_debug_la_CFLAGS = \
	$(libnorns_la_CFLAGS)

libnorns_debug_la_CPPFLAGS = \
	$(libnorns_la_CPPFLAGS) \
	-D__NORNS_DEBUG__ \
	-Wp,-U_FORTIFY_SOURCE

libnorns_debug_la_LDFLAGS = \
	$(libnorns_la_LDFLAGS)
	
libnorns_debug_la_LIBADD = \
	libnorns_common_debug.la


################################################################################
# libnornsctl.so: control library
################################################################################
libnornsctl_la_SOURCES = \
	communication.c \
	communication.h \
	context-common.c \
	context-common.h \
	libnornsctl-context.h \
	libnornsctl.c

libnornsctl_la_CFLAGS = \
	-Wall -Wextra -std=gnu99

libnornsctl_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-D__BUILD_LIBNORNSCTL__

libnornsctl_la_LDFLAGS = \
	-version-info 0:1:0

libnornsctl_la_LIBADD = \
	libnorns_common.la


## debug version ##
libnornsctl_debug_la_SOURCES = \
	$(libnornsctl_la_SOURCES)

libnornsctl_debug_la_CFLAGS = \
	$(libnornsctl_la_CFLAGS)

libnornsctl_debug_la_CPPFLAGS = \
	$(libnornsctl_la_CPPFLAGS) \
	-D__NORNS_DEBUG__ \
	-Wp,-U_FORTIFY_SOURCE

libnornsctl_debug_la_LDFLAGS = \
	$(libnornsctl_la_LDFLAGS)

libnornsctl_debug_la_LIBADD = \
	libnorns_common_debug.la
