# Copyright (C) 2017 Barcelona Supercomputing Center
#                    Centro Nacional de Supercomputacion
#
# This file is part of the Data Scheduler, a daemon for tracking and managing
# requests for asynchronous data transfer in a hierarchical storage environment.
#
# See AUTHORS file in the top level directory for information
# regarding developers and contributors.
#
# The Data Scheduler is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Data Scheduler is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Data Scheduler.  If not, see <http://www.gnu.org/licenses/>.
#

ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS = urd

MOSTLYCLEANFILES = \
	defaults.cpp \
	messages.pb.cc \
	messages.pb.h

urd_SOURCES = \
	$(top_srcdir)/rpc/norns-rpc.h \
	ipc-listener.hpp \
	backend-base.cpp \
	backend-base.hpp \
	defaults.hpp \
	nvml-dax.cpp \
	nvml-dax.hpp \
	main.cpp	 \
	messages.hpp \
	posix-fs.cpp \
	posix-fs.hpp \
	response-base.hpp \
	responses.cpp \
	responses.hpp \
	request-base.cpp \
	request-base.hpp \
	requests.hpp \
	requests.cpp \
	settings.cpp \
	settings.hpp \
	urd.cpp	\
	urd.hpp	\
	utils.cpp \
	utils.hpp

nodist_urd_SOURCES = \
	defaults.cpp \
	messages.pb.cc \
	messages.pb.h

urd_CXXFLAGS = \
	@TBB_CFLAGS@ \
	-std=gnu++11 -Wall -Wextra

urd_CPPFLAGS = \
	-DSPDLOG_ENABLE_SYSLOG \
	@BOOST_CPPFLAGS@ \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src	\
	-I$(top_srcdir)/rpc	\
	-I$(top_builddir)/rpc

urd_LDFLAGS = 				\
	@TBB_LIBS@	  				\
	@BOOST_LDFLAGS@				\
    @BOOST_SYSTEM_LIB@			\
    @BOOST_ASIO_LIB@			\
    @BOOST_PROGRAM_OPTIONS_LIB@	\
	@PROTOBUF_LIBS@ \
	-pthread

urd_LDADD = \
	-lboost_system \
	-lboost_thread

BUILT_SOURCES = \
	defaults.hpp \
	messages.pb.cc \
	messages.pb.h

defaults.cpp: Makefile
	@( echo "/* This file autogenerated by Makefile */"; \
	   echo "#include \"defaults.hpp\""; \
	   echo ""; \
	   echo "namespace defaults {"; \
	   echo "    const char* progname           = \"urd\";"; \
	   echo "    const bool  daemonize          = true;"; \
	   echo "    const char* running_dir        = \"/tmp\";"; \
	   echo "    const char* ipc_sockfile       = \"/tmp/urd.socket\";"; \
	   echo "    const char* daemon_pidfile     = \"/tmp/urd.pid\";"; \
	   echo "    const uint32_t workers_in_pool = std::thread::hardware_concurrency();"; \
	   echo "    const char* config_file        = \"$(sysconfdir)/norns.conf\";"; \
	   echo "} // namespace defaults"; \
	 ) > $@

%.pb.cc %.pb.h: $(top_srcdir)/rpc/%.proto
	$(PROTOC) --proto_path=$(top_srcdir)/rpc --cpp_out=$(builddir) $^
