##########################################################################
#  Copyright (C) 2017-2019 Barcelona Supercomputing Center               #
#                          Centro Nacional de Supercomputacion           #
#  All rights reserved.                                                  #
#                                                                        #
#  This file is part of NORNS, a service that allows other programs to   #
#  start, track and manage asynchronous transfers of data resources      #
#  between different storage backends.                                   #
#                                                                        #
#  See AUTHORS file in the top level directory for information regarding #
#  developers and contributors.                                          #
#                                                                        #
#  This software was developed as part of the EC H2020 funded project    #
#  NEXTGenIO (Project ID: 671951).                                       #
#      www.nextgenio.eu                                                  #
#                                                                        #
#  Permission is hereby granted, free of charge, to any person obtaining #
#  a copy of this software and associated documentation files (the       #
#  "Software"), to deal in the Software without restriction, including   #
#  without limitation the rights to use, copy, modify, merge, publish,   #
#  distribute, sublicense, and/or sell copies of the Software, and to    #
#  permit persons to whom the Software is furnished to do so, subject to #
#  the following conditions:                                             #
#                                                                        #
#  The above copyright notice and this permission notice shall be        #
#  included in all copies or substantial portions of the Software.       #
#                                                                        #
#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,       #
#  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF    #
#  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.#
#  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY  #
#  CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,  #
#  TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE     #
#  SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.                #
##########################################################################

AM_CPPFLAGS = -I m4

TESTS = api core

check_PROGRAMS = $(TESTS) api_interactive

END = 

COMMON_SOURCES = \
	compare-files.cpp \
	compare-files.hpp \
	config-template.cpp \
	config-template.hpp \
	fake-daemon.cpp \
	fake-daemon.hpp \
	test-env.cpp \
	test-env.hpp \
	$(END)

api_CXXFLAGS = \
	-Wall -Wextra \
	$(END)

api_CPPFLAGS = \
	@BOOST_CPPFLAGS@ \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/rpc \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/externals/hermes/include \
	-D__NORNS_DEBUG__ \
	$(END)

api_SOURCES = \
	catch.hpp \
	api-main.cpp \
	api-namespace-register.cpp \
	api-namespace-unregister.cpp \
	api-copy-local-data.cpp \
	api-copy-remote-data.cpp \
	api-remove-local-data.cpp \
	api-job-register.cpp \
	api-job-update.cpp \
	api-job-unregister.cpp \
	api-process-add.cpp \
	api-process-remove.cpp \
	api-resource-init.cpp \
	api-task-init.cpp \
	api-task-submit.cpp \
	api-task-status.cpp \
	api-send-command.cpp \
	api-ctl-copy-local-data.cpp \
	api-ctl-task-init.cpp \
	api-ctl-task-submit.cpp \
	api-ctl-task-status.cpp \
	api-ctl-copy-remote-data.cpp \
	api-ctl-remove-local-data.cpp \
	$(COMMON_SOURCES) \
	$(END)

api_LDFLAGS = \
	@BOOST_ASIO_LIB@ \
	@BOOST_LDFLAGS@	\
	@BOOST_FILESYSTEM_LIB@ \
	@BOOST_PROGRAM_OPTIONS_LIB@	\
	@BOOST_SYSTEM_LIB@ \
	@BOOST_THREAD_LIB@ \
	@BOOST_REGEX_LIB@ \
	@PROTOBUF_LIBS@ \
	-no-install \
	-Wl,-rpath,$(top_builddir)/lib/.libs \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

EXTRA_api_DEPENDENCIES = \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

BUILT_SOURCES = \
	config-template.cpp

edit = $(SED) \
		-e 's|\"|\\"|g'  \
		-e 's|^|    "|g' \
		-e 's|$$|\\n"|g'

config-template.cpp: Makefile $(top_srcdir)/etc/norns.conf.in
	@( echo "/* This file autogenerated by Makefile */"; \
		echo "#include \"config-template.hpp\""; \
		echo ""; \
		echo "const std::string config_file::cftemplate = "; \
		$(edit) $(top_srcdir)/etc/norns.conf.in ; \
		echo ";"; \
	) > $@

# The following produces a version of the api tests where the urd daemon 
# is not started automatically by the test, so that a running daemon can be
# tested interactively
api_interactive_CXXFLAGS = \
	$(api_CXXFLAGS)
api_interactive_CPPFLAGS = \
	$(api_CPPFLAGS) \
	-DUSE_REAL_DAEMON \
	-D__NORNS_DEBUG__
api_interactive_SOURCES = \
	$(api_SOURCES)
api_interactive_LDFLAGS = \
	$(api_LDFLAGS)
EXTRA_api_interactive_DEPENDENCIES = \
	$(EXTRA_api_DEPENDENCIES)


core_CXXFLAGS = \
	-Wall -Wextra \
	$(END)

core_CPPFLAGS = \
	@BOOST_CPPFLAGS@ \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/rpc \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/externals/hermes/include \
	-D__NORNS_DEBUG__ \
	$(END)

core_SOURCES = \
	catch.hpp \
	api-main.cpp \
	utils-path-normalize.cpp \
	utils-tar.cpp \
	$(COMMON_SOURCES) \
	$(END)

core_LDFLAGS = \
	-no-install \
	@BOOST_ASIO_LIB@ \
	@BOOST_LDFLAGS@	\
	@BOOST_FILESYSTEM_LIB@ \
	@BOOST_PROGRAM_OPTIONS_LIB@	\
	@BOOST_SYSTEM_LIB@ \
	@BOOST_THREAD_LIB@ \
	@BOOST_REGEX_LIB@ \
	@PROTOBUF_LIBS@ \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

EXTRA_core_DEPENDENCIES = \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

MOSTLYCLEANFILES = \
	config-template.cpp
