##########################################################################
#  Copyright (C) 2017-2018 Barcelona Supercomputing Center               #
#                          Centro Nacional de Supercomputacion           #
#  All rights reserved.                                                  #
#                                                                        #
#  This file is part of the NORNS Data Scheduler, a service that allows  #
#  other programs to start, track and manage asynchronous transfers of   #
#  data resources transfers requests between different storage backends. #
#                                                                        #
#  See AUTHORS file in the top level directory for information           #
#  regarding developers and contributors.                                #
#                                                                        #
#  The NORNS Data Scheduler is free software: you can redistribute it    #
#  and/or modify it under the terms of the GNU Lesser General Public     #
#  License as published by the Free Software Foundation, either          #
#  version 3 of the License, or (at your option) any later version.      #
#                                                                        #
#  The NORNS Data Scheduler is distributed in the hope that it will be   #
#  useful, but WITHOUT ANY WARRANTY; without even the implied warranty   #
#  of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  #
#  Lesser General Public License for more details.                       #
#                                                                        #
#  You should have received a copy of the GNU Lesser General             #
#  Public License along with the NORNS Data Scheduler.  If not, see      #
#  <http://www.gnu.org/licenses/>.                                       #
##########################################################################

include $(top_srcdir)/config/Make-inc.mk

CXX = @MPICXX@

AM_CPPFLAGS = -I m4

TESTS = mpi_tests

check_PROGRAMS = mpi_tests

COMMON_SOURCES = \
	$(END)

mpi_tests_SOURCES = \
	$(top_srcdir)/tests/catch.hpp \
	mpi-tests-main.cpp \
	mpi-remote-transfers.cpp \
	mpi-helpers.hpp \
	mpi-helpers.cpp \
	commands.hpp \
	../fake-daemon.cpp \
	../fake-daemon.hpp \
	../test-env.cpp \
	../test-env.hpp \
	config-template.cpp \
	config-template.hpp \
	$(COMMON_SOURCES) \
	$(END)

mpi_tests_CPPFLAGS = \
	@BOOST_CPPFLAGS@ \
	-I$(top_srcdir)/tests \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/rpc \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/externals/hermes/include \
	-D__NORNS_DEBUG__ \
	$(END)

mpi_tests_CXXFLAGS = \
	-Wall -Wextra \
	$(END)
	
mpi_tests_LDFLAGS = \
	@MPILIBS@ \
	@BOOST_ASIO_LIB@ \
	@BOOST_LDFLAGS@	\
	@BOOST_FILESYSTEM_LIB@ \
	@BOOST_PROGRAM_OPTIONS_LIB@	\
	@BOOST_SYSTEM_LIB@ \
	@BOOST_THREAD_LIB@ \
	@BOOST_REGEX_LIB@ \
	@PROTOBUF_LIBS@ \
	-no-install \
	-Wl,-rpath,$(top_builddir)/lib/.libs \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

EXTRA_mpi_tests_DEPENDENCIES = \
	$(top_builddir)/src/liburd_aux.la \
	$(top_builddir)/lib/libnorns_debug.la \
	$(top_builddir)/lib/libnornsctl_debug.la \
	$(END)

BUILT_SOURCES = \
	config-template.cpp

edit = $(SED) \
		-e 's|\"|\\"|g'  \
		-e 's|^|    "|g' \
		-e 's|$$|\\n"|g'

config-template.cpp: Makefile $(top_srcdir)/etc/norns.conf.in
	@( echo "/* This file autogenerated by Makefile */"; \
		echo "#include \"config-template.hpp\""; \
		echo ""; \
		echo "const std::string config_file::cftemplate = "; \
		$(edit) $(top_srcdir)/etc/norns.conf.in ; \
		echo ";"; \
	) > $@
